# render_project

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  cnr.sh  compile_commands.json  configure.ac  example.ppm  left  makefile  rendeng  rendeng.sublime-project  rendeng.sublime-workspace  right  scene.json  test_sceene  todo
blender_object_parsing/: obj_parser.py
docs/: todo.md  web-resorses.md  web_resorses
include/: error.h  imgexp.h  linalg.h  models.h  objs.h  sceene.h  vector.h
include/editor/: linalg2.h  view.h
include/rendeng/: image.h  imgexp.h  linalg.h  models.h  objects.h  objs.h  sceene.h  scene.h  version.h  version.h.in
libs/: cJSON.c
rendeng_code/: imgexp.h  main.c  objs.c  objs.h  sceene.c  sceene.h
sceene_editor/: cnr.sh  makefile  sceene_editor.sublime-project  sceene_editor.sublime-workspace
sceene_editor/code/: linalg2.c  linalg2.h  main.c  view.c  view.h
scripts/blender_object_parsing/: obj_parser.py
src/: error.c  imgexp.c  linalg.c  main.c  objs.c  sceene.c  vector.c
src/editor/: linalg2.c  main.c  view.c
src/rendeng/: error.c  image.c  imgexp.c  linalg.c  main.c  models.c  objects.c  objs.c  sceene.c  scene.c
test/: vector_test.c
